--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,23 +4,43 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background="@color/azul">
 
     <TextView
         android:id="@+id/txt1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Bienvenida"
+        android:text="Bienvenido"
         android:textSize="50sp"
-        android:layout_centerInParent="true"/>
+        android:layout_marginTop="20dp"
+        android:layout_centerHorizontal="true"/>
+
+    <TextView
+        android:id="@+id/txt2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Practica 4"
+        android:textSize="40sp"
+        android:layout_below="@id/txt1"
+        android:layout_centerHorizontal="true"/>
+
+    <TextView
+        android:id="@+id/txt3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Jesús Arturo Hernández Cristán"
+        android:textSize="25sp"
+        android:layout_below="@id/txt2"
+        android:layout_centerHorizontal="true"/>
 
     <Button
         android:id="@+id/btn1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Ir a la otra actividad"
-        android:layout_below="@+id/txt1"
-        android:layout_centerHorizontal="true"
+        android:textSize="30sp"
+        android:text="Entrar"
+        android:layout_centerInParent="true"
         android:layout_marginTop="10dp"/>
 
 </RelativeLayout>
