--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity2">
+    tools:context=".MainActivity2"
+    android:background="@color/azul">
 
     <TextView
         android:id="@+id/txt1"
@@ -12,6 +13,7 @@
         android:layout_height="wrap_content"
         android:text="Bienvenido"
         android:textSize="50sp"
+        android:layout_marginTop="25dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -29,7 +31,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="intent explicitos"
+            android:text="Intents Explicitos"
             android:textSize="30dp"/>
 
         <Button
@@ -38,7 +40,7 @@
             android:layout_height="wrap_content"
             android:text="Intent 1"
             android:layout_gravity="center"
-            android:layout_marginTop="5dp"/>
+            android:layout_marginTop="10dp"/>
 
         <Button
             android:id="@+id/btn2"
@@ -48,11 +50,60 @@
             android:layout_gravity="center"
             android:layout_marginTop="5dp"/>
 
+        <Button
+            android:id="@+id/btn3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Intent 2"
+            android:layout_gravity="center"
+            android:layout_marginTop="5dp"/>
+        <Button
+            android:id="@+id/btn4"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Intent 2"
+            android:layout_gravity="center"
+            android:layout_marginTop="5dp"/>
+
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="intent implicitos"
+            android:text="Intents Implicitos"
+            android:layout_marginTop="10dp"
             android:textSize="30dp"/>
+
+        <Button
+            android:id="@+id/btn5"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Intent 1"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"/>
+
+        <Button
+            android:id="@+id/btn6"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Intent 2"
+            android:layout_gravity="center"
+            android:layout_marginTop="5dp"/>
+
+        <Button
+            android:id="@+id/btn7"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Intent 2"
+            android:layout_gravity="center"
+            android:layout_marginTop="5dp"/>
+
+        <Button
+            android:id="@+id/btn8"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Intent 2"
+            android:layout_gravity="center"
+            android:layout_marginTop="5dp"/>
 
     </LinearLayout>
 
