--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,7 @@
         android:text="Bienvenido"
         android:textSize="50sp"
         android:layout_marginTop="20dp"
+        android:textColor="@color/black"
         android:layout_centerHorizontal="true"/>
 
     <TextView
@@ -22,6 +23,7 @@
         android:layout_height="wrap_content"
         android:text="Practica 4"
         android:textSize="40sp"
+        android:textColor="@color/black"
         android:layout_below="@id/txt1"
         android:layout_centerHorizontal="true"/>
 
@@ -32,6 +34,7 @@
         android:text="Jesús Arturo Hernández Cristán"
         android:textSize="25sp"
         android:layout_below="@id/txt2"
+        android:textColor="@color/black"
         android:layout_centerHorizontal="true"/>
 
     <Button
