--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
-    android:background="@color/azul">
+    android:background="@drawable/color1">
 
     <TextView
         android:id="@+id/txt1"
@@ -32,7 +32,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Jesús Arturo Hernández Cristán"
-        android:textSize="25sp"
+        android:textSize="23sp"
         android:layout_below="@id/txt2"
         android:textColor="@color/black"
         android:layout_centerHorizontal="true"/>
@@ -41,9 +41,11 @@
         android:id="@+id/btn1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="30sp"
-        android:text="Entrar"
         android:layout_centerInParent="true"
-        android:layout_marginTop="10dp"/>
+        android:layout_marginTop="10dp"
+        android:textColor="@color/black"
+        android:backgroundTint="@color/verde"
+        android:text="Entrar"
+        android:textSize="30sp" />
 
 </RelativeLayout>
