--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -5,109 +5,158 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity2"
-    android:background="@color/azul">
-
-    <TextView
-        android:id="@+id/txt1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Bienvenido"
-        android:textColor="@color/black"
-        android:textSize="50sp"
-        android:layout_marginTop="25dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:orientation="vertical"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt1"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:padding="20dp">
+    android:background="@drawable/color1">
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/txt1"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:text="INTENTS"
+            android:textColor="@color/black"
+            android:textSize="25sp"
+            android:gravity="center"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/txt2"/>
+
+
+        <TextView
+            android:id="@+id/txt2"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             android:text="Intents Explicitos"
             android:textColor="@color/black"
-            android:textSize="30dp"/>
+            android:textSize="25dp"
+            android:gravity="center"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/txt1"
+            app:layout_constraintBottom_toTopOf="@+id/btn1"/>
 
         <Button
             android:id="@+id/btn1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="350dp"
+            android:layout_height="0dp"
+            android:textSize="12dp"
             android:text="Intent 1"
             android:layout_gravity="center"
-            android:layout_marginTop="10dp"/>
+            android:textColor="@color/black"
+            android:backgroundTint="@color/verde"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/txt2"
+            app:layout_constraintBottom_toTopOf="@+id/btn2"/>
 
         <Button
             android:id="@+id/btn2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="350dp"
+            android:layout_height="0dp"
             android:text="Intent 2"
+            android:textSize="12dp"
+            android:textColor="@color/black"
+            android:backgroundTint="@color/verde"
             android:layout_gravity="center"
-            android:layout_marginTop="5dp"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/btn1"
+            app:layout_constraintBottom_toTopOf="@+id/btn3"/>
 
         <Button
             android:id="@+id/btn3"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="350dp"
+            android:layout_height="0dp"
             android:text="Intent 2"
+            android:textSize="12dp"
+            android:textColor="@color/black"
+            android:backgroundTint="@color/verde"
             android:layout_gravity="center"
-            android:layout_marginTop="5dp"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/btn2"
+            app:layout_constraintBottom_toTopOf="@+id/btn4"/>
         <Button
             android:id="@+id/btn4"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="350dp"
+            android:layout_height="0dp"
             android:text="Intent 2"
+            android:textSize="12dp"
+            android:textColor="@color/black"
+            android:backgroundTint="@color/verde"
             android:layout_gravity="center"
-            android:layout_marginTop="5dp"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/btn3"
+            app:layout_constraintBottom_toTopOf="@+id/txt3"/>
 
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/txt3"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             android:text="Intents Implicitos"
             android:textColor="@color/black"
-            android:layout_marginTop="10dp"
-            android:textSize="30dp"/>
+            android:textSize="25dp"
+            android:gravity="center"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/btn4"
+            app:layout_constraintBottom_toTopOf="@+id/btn5"/>
 
         <Button
             android:id="@+id/btn5"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="350dp"
+            android:layout_height="0dp"
             android:text="Intent 1"
+            android:textSize="12dp"
+            android:textColor="@color/black"
+            android:backgroundTint="@color/verde"
             android:layout_gravity="center"
-            android:layout_marginTop="10dp"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/txt3"
+            app:layout_constraintBottom_toTopOf="@+id/btn6"/>
 
         <Button
             android:id="@+id/btn6"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="350dp"
+            android:layout_height="0dp"
             android:text="Intent 2"
+            android:textSize="12dp"
+            android:textColor="@color/black"
+            android:backgroundTint="@color/verde"
             android:layout_gravity="center"
-            android:layout_marginTop="5dp"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/btn5"
+            app:layout_constraintBottom_toTopOf="@+id/btn7"/>
 
         <Button
             android:id="@+id/btn7"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="350dp"
+            android:layout_height="0dp"
             android:text="Intent 2"
+            android:textSize="12dp"
+            android:textColor="@color/black"
+            android:backgroundTint="@color/verde"
             android:layout_gravity="center"
-            android:layout_marginTop="5dp"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/btn6"
+            app:layout_constraintBottom_toTopOf="@+id/btn8"/>
 
         <Button
             android:id="@+id/btn8"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="350dp"
+            android:layout_height="0dp"
             android:text="Intent 2"
+            android:textSize="12dp"
+            android:textColor="@color/black"
+            android:backgroundTint="@color/verde"
             android:layout_gravity="center"
-            android:layout_marginTop="5dp"/>
-
-    </LinearLayout>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/btn7"
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
