--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -15,7 +15,10 @@
         android:textSize="50sp"
         android:layout_marginTop="20dp"
         android:textColor="@color/black"
-        android:layout_centerHorizontal="true"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/txt2"/>
 
     <TextView
         android:id="@+id/txt2"
@@ -25,7 +28,10 @@
         android:textSize="40sp"
         android:textColor="@color/black"
         android:layout_below="@id/txt1"
-        android:layout_centerHorizontal="true"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txt1"
+        app:layout_constraintBottom_toTopOf="@+id/txt3"/>
 
     <TextView
         android:id="@+id/txt3"
@@ -35,17 +41,23 @@
         android:textSize="23sp"
         android:layout_below="@id/txt2"
         android:textColor="@color/black"
-        android:layout_centerHorizontal="true"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txt2"
+        />
 
     <Button
         android:id="@+id/btn1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:layout_marginTop="10dp"
-        android:textColor="@color/black"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txt3"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="60dp"
         android:backgroundTint="@color/verde"
         android:text="Entrar"
+        android:textColor="@color/black"
         android:textSize="30sp" />
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
