--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -107,7 +107,7 @@
             android:id="@+id/btn5"
             android:layout_width="350dp"
             android:layout_height="0dp"
-            android:text="Intent 1"
+            android:text="Navegador"
             android:textSize="12dp"
             android:textColor="@color/black"
             android:backgroundTint="@color/verde"
@@ -121,7 +121,7 @@
             android:id="@+id/btn6"
             android:layout_width="350dp"
             android:layout_height="0dp"
-            android:text="Intent 2"
+            android:text="Mapa"
             android:textSize="12dp"
             android:textColor="@color/black"
             android:backgroundTint="@color/verde"
@@ -135,7 +135,7 @@
             android:id="@+id/btn7"
             android:layout_width="350dp"
             android:layout_height="0dp"
-            android:text="Intent 2"
+            android:text="Galeria"
             android:textSize="12dp"
             android:textColor="@color/black"
             android:backgroundTint="@color/verde"
@@ -149,7 +149,7 @@
             android:id="@+id/btn8"
             android:layout_width="350dp"
             android:layout_height="0dp"
-            android:text="Intent 2"
+            android:text="Camara"
             android:textSize="12dp"
             android:textColor="@color/black"
             android:backgroundTint="@color/verde"
