--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -39,7 +39,7 @@
             android:layout_width="350dp"
             android:layout_height="0dp"
             android:textSize="12dp"
-            android:text="Intent 1"
+            android:text="Facebook"
             android:layout_gravity="center"
             android:textColor="@color/black"
             android:backgroundTint="@color/verde"
@@ -52,7 +52,7 @@
             android:id="@+id/btn2"
             android:layout_width="350dp"
             android:layout_height="0dp"
-            android:text="Intent 2"
+            android:text="WhatsApp"
             android:textSize="12dp"
             android:textColor="@color/black"
             android:backgroundTint="@color/verde"
@@ -66,7 +66,7 @@
             android:id="@+id/btn3"
             android:layout_width="350dp"
             android:layout_height="0dp"
-            android:text="Intent 2"
+            android:text="Youtube"
             android:textSize="12dp"
             android:textColor="@color/black"
             android:backgroundTint="@color/verde"
@@ -79,7 +79,7 @@
             android:id="@+id/btn4"
             android:layout_width="350dp"
             android:layout_height="0dp"
-            android:text="Intent 2"
+            android:text="Word"
             android:textSize="12dp"
             android:textColor="@color/black"
             android:backgroundTint="@color/verde"
