--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,18 +46,16 @@
         app:layout_constraintTop_toBottomOf="@+id/txt2"
         />
 
-    <Button
-        android:id="@+id/btn1"
+    <TextView
+        android:id="@+id/txt4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/txt3"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt3"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginTop="60dp"
-        android:backgroundTint="@color/verde"
-        android:text="Entrar"
+        app:layout_constraintEnd_toEndOf="parent"
         android:textColor="@color/black"
-        android:textSize="30sp" />
+        android:textStyle="bold"
+        android:textSize="40sp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
